unpackaged/main/default/objects/ints__Yodlee_Call__c/ints__Yodlee_Call__c.object-meta.xml
<CustomObject>
    <description>One Yodlee Call for a User/Account.</description>
    <label>Yodlee Call</label>
    <nameField>
        <displayFormat>YCL-{MM}-{DD}-{YYYY}-{000000}</displayFormat>
        <label>Yodlee Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yodlee Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>