unpackaged/main/default/objects/ints__Yodlee_Call__c/fields/genesis__Total_Deposits__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Deposits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>