unpackaged/main/default/objects/ints__Yodlee_Call__c/fields/ints__Client_Name__c.field-meta.xml
<CustomField>
    <fullName>ints__Client_Name__c</fullName>
    <description>This is the name of the client module that is using the search service.</description>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>