unpackaged/main/default/objects/ints__Yodlee_Call__c/fields/ints__Lower_Fetch_Limit__c.field-meta.xml
<CustomField>
    <fullName>ints__Lower_Fetch_Limit__c</fullName>
    <description>This is the lower limit for the set of records that needs to be retrieved and kept in the cache (i.e., the value for m while retrieving from mth transaction to nth transactions). 
See the description of higherFetchLimit for more details.</description>
    <label>Lower Fetch Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>